--- a/css/index.css
+++ b/css/index.css
@@ -1,4 +1,3 @@
-
 /* colors  */
 
 :root { --main-grey: #212121; 
@@ -14,27 +13,78 @@
 
 /* colors end */
 
+* {
+    padding: 0;
+    margin:0;
+    box-sizing: border-box;
+}
+
+/* dodałam dodatkowy reset, ponieważ pomimo zastosowania normalizotra pojawiały się dziwne paddingi np. padding-inline-start: 40px; */
+
 body {
     font-family: 'Roboto', sans-serif;
     color: var(--main-grey);
     background-color: var(--white);
     font-size: 14px;
     letter-spacing: 0.03em;
+    width: 1600px;
+    margin: 0 auto;
+}
+
+header {
+    border-bottom: 1px solid var(--beige-3);
+}
+
+.container {
+    width: 1200px;
+    margin: 0 auto;
+}
+
+.flex-nav-container {
+    display:flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.flex-inside-nav {
+    display:flex;
+    align-items: center;
+}
+
+.menu {
+    margin-left: 93px;
+    display: flex;
+}
+
+.menu li {
+    margin: 32px 46px;
+    }
+    
+.contact {
+    display:flex;
+}
+
+.contact li {
+    margin: 0 50px;
 }
 
 button {
     cursor: pointer;
     font-family: inherit;
 }
+
 .list {
     list-style: none;
 }
+
 .link {
     text-decoration: none;
 }
+
 .logo-span {
     color: var(--black);
 }
+
 .logo-footer-span {
     color: var(--white);
 }
@@ -62,7 +112,6 @@ button {
     text-decoration: none;
 }
 
-
 .contact-link:active, .contact-link:hover, .contact-link:focus {
     color: var(--blue);
 }
@@ -77,7 +126,9 @@ button {
 
 .hero {
     background-color: var(--dark-grey);
+    height: 600px;
 }
+
 .header {
     font-weight: 900;
     font-size: 44px;
@@ -85,21 +136,26 @@ button {
     letter-spacing: 0.06em;
     text-transform: uppercase;
     color: var(--white);
+    text-align: center;
+    margin: 0;
+    padding: 200px 452px 0 453px;
 }
+
 .hero-button {
-width: 200px;
-height: 50px;
-background-color: var(--blue);
-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-border-radius: 4px;
-font-weight: 700;
-font-size: 16px;
-line-height: 1.88;
-align-items: center;
-text-align: center;
-letter-spacing: 0.06em;
-color: var(--white);
-}
+    width: 200px;
+    height: 50px;
+    background-color: var(--blue);
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+    border-radius: 4px;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 1.88;
+    align-items: center;
+    text-align: center;
+    letter-spacing: 0.06em;
+    color: var(--white);
+    margin: 30px 700px 200px 700px;
+    }
 
 .visually-hidden {
     position: absolute;
@@ -108,12 +164,17 @@ color: var(--white);
     margin: -1px;
     border: 0;
     padding: 0;
-    
     white-space: nowrap;
     clip-path: inset(100%);
     clip: rect(0 0 0 0);
     overflow: hidden;
   }
+
+.section {
+    padding: 94px 0 94px 0;
+}
+
+/* na stronie dublują się u mnie te paddingi pionowe, nie wiem jak temu zapobiec - myślałam, że jest brana tylko jedna wartość przy margniesach pionowych */
 
 .advantages h3 {
     font-weight: 700;
@@ -121,6 +182,7 @@ color: var(--white);
     line-height: 1.14;
     letter-spacing: 0.03em;
     text-transform: uppercase;
+    padding-bottom: 10px;
 }
 
 .advantages p {
@@ -128,11 +190,23 @@ color: var(--white);
     color: var(--light-grey);
 }
 
+.flex-advantages ul {
+    display: flex;
+    gap: 30px;
+
+}
 .section-name {
     font-weight: 700;
     font-size: 36px;
     line-height: 1.17;
     letter-spacing: 0.03em;
+    text-align: center;
+    padding-bottom: 50px;
+}
+
+.flex-activities ul {
+    display: flex;
+    gap: 30px;
 }
 
 .team {
@@ -144,6 +218,8 @@ color: var(--white);
     font-size: 16px;
     line-height: 1.19;
     letter-spacing: 0.03em;
+    text-align: center;
+    padding: 30px 0 10px 0;
 }
 
 .team-position {
@@ -151,26 +227,59 @@ color: var(--white);
     line-height: 1.19;
     letter-spacing: 0.03em;
     color: var(--light-grey);
+    text-align: center;
 }
 
+.flex-team ul {
+    display: flex;
+    gap: 30px;
+    padding-top: 50px;
+}
+
+.team li {
+    background-color: var(--white);
+    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+    border-radius: 0px 0px 4px 4px;
+    width: 270px;
+    height: 368px;
+}
 
 footer {
     background-color: var(--dark-grey);
+    padding-top: 60px;
+    padding-bottom: 60px;
+}
+
+.logo-footer {
+    font-family: 'Raleway', sans-serif;
+    font-weight: 700;
+    font-size: 26px;
+    line-height: 1.19;
+    letter-spacing: 0.03em;
+    color: var(--blue);
+    text-decoration: none;
+    padding-bottom: 20px;
 }
 
 address {
     font-style: normal;
 }
+
 .address-link {
     font-size: 14px;
     line-height: 1.71;
     letter-spacing: 0.03em;
     color: var(--white);
 }
+
+.address li {
+    padding-bottom: 9px;
+}
+
 .address-link:hover, .address-link:focus{
     color: var(--blue);
 }
+
 .address-transparent {
     color: rgba(255, 255, 255, 0.6);
 }
-
