--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -22,11 +22,19 @@
 body {
     font-family: 'Roboto', sans-serif;
     color: var(--main-grey);
-    background-color: #fff;
+    background-color: var(--white);
     font-size: 14px;
     letter-spacing: 0.03em;
-    width: 1600px;
-    margin: 0 auto;
+}
+
+img {
+    display: block;
+    max-width: 100%;
+    height: auto;
+}
+
+address {
+    font-style: normal;
 }
 
 header {
@@ -36,6 +44,7 @@ header {
 .container {
     width: 1200px;
     margin: 0 auto;
+    padding: 0 15px;
 }
 
 .section {
@@ -44,29 +53,24 @@ header {
 
 .flex-nav-container {
     display:flex;
-    justify-content: space-between;
     align-items: center;
-    /* height: 80px; */
-    /* padding-left: 215px;
-    padding-right: 227px; */
 }
 
-.flex-inside-nav {
-    display:flex;
-    align-items: center;
+.nav-menu {
+    margin-left: 93px;
+    
 }
 
 .menu {
-    margin-left: 93px;
     display: flex;
+    gap: 46px;
 }
 
-.menu li {
-    margin: 32px 46px;
-    }
     
-.contact {
-    display: flex;
+.contact-list {
+    display:flex;
+    gap: 50px;
+    margin-left: auto;
 }
 
 .contact li {
@@ -76,8 +80,10 @@ header {
 button {
     cursor: pointer;
     font-family: inherit;
+    display: block;
+    border: none;
+    border-radius: 4px;
 }
-
 .list {
     list-style: none;
 }
@@ -107,7 +113,10 @@ button {
     line-height: 1.14;
     letter-spacing: 0.02em;
     color: var(--main-grey);
+    padding: 32px 0;
+    display: block;
 }
+
 .contact-link:active, .contact-link:hover, .contact-link:focus {
     color: var(--blue);
 }
